--- a/style.css
+++ b/style.css
@@ -38,11 +38,126 @@ body{
 .top h5{
   text-align: center;
 }
+.nav-main{
+    width: 100%;
+    background-color: #ff751a;
+    color: white;
+    height: 50px;
+    z-index: 1000;
+  }
+  .nav-main .logo{
+    float: left;
+    height: 25px;
+    padding: 15px 30px;
+    line-height: 20px;
+  }
+  .nav-main > ul{
+    margin:0;
+    padding: 0;
+    float: left;
+    list-style-type: none;
+  }
+  .nav-main > ul >li{
+    float: left;
+    text-align: center;
+    font-size: 17px;
+  }
+  .nav-item{
+    display: inline-block;
+    padding: 15px 20px;
+    height: 50px;
+    line-height: 20px;
+    text-decoration: none;
+    color: white;
+  }
+  .nav-item:hover{
+    background-color: white;
+    color: #ff751a;
+    text-decoration: none;
+  }
+  .nav-content{
+    position: absolute;
+    overflow: hidden;
+    background-color: #ff751a;
+    color: white;
+    max-height: 0;
+    
+  }
+  .nav-content li{
+    border-bottom: 0.5px solid white;
+    color: white !important;
+  }
+  .nav-content li:hover{
+    background-color: white;
+    color: #ff751a !important;
+
+  }
+  .nav-sub{
+   
+    width: 100%;
+  }
+  .nav-sub ul{
+    padding: 0;
+    margin:0;
+    list-style-type: none;
+  }
+  .nav-sub ul li a{
+    display: inline-block;
+    padding-top: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    text-align: center;
+    color: white;
+  }
+  .nav-sub ul li a:hover {
+      background-color: white;
+      color: #ff751a;
+      text-decoration: none;
+
+  }
+  
+  .parent{
+    z-index: 3000;
+    position: relative;
+    background-color: #ff751a;
+    color: white;
+    max-width: 100%;
+  }
+  .nav-item:hover, .nav-item:focus{
+    background-color: white;
+    color: #ff751a;
+    text-decoration: none;
+  }
+  .nav-item:hover ~ .nav-content{
+    max-height: 400px;
+    border:0.5px solid white;
+    -webkit-transition: max-height 0.4s ease-in;
+    -moz-transition: max-height 0.4s ease-in;
+    transition: max-height 0.4s ease-in;
+    display: block;
+    border: 0.5px solid #ff751a;
+    border-top: 0.5px solid white !important;
+  }
+
+  .nav-gap{
+    margin-left: 25%;
+  }
+  .nav-content:hover{
+    display: block;
+    position: absolute;
+    max-height: 400px;
+    border: 0.5px solid #ff751a;
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-top: 0.5px solid white !important;
+  }
+
 .nav {
   overflow: hidden;
   background-color: #ff751a;
   max-width: 100%;
   color: white;
+
 }
 
 .nav a {
@@ -172,7 +287,58 @@ body{
 	margin-left: auto;
 	margin-right: auto;
   margin-bottom: 5px;
+  text-align: justify;
 	
+}
+.heading{
+    padding: 0 5px;
+    color: #ff751a;
+  }
+  .maincol{
+    color: #ff751a;
+  }
+  .content{
+    
+    overflow: hidden;
+  }
+  .about{
+  padding: 10px;
+  text-align: center;
+  color: #ff751a;
+  border:1px solid #ff751a;
+  border-top: none;
+}
+
+.gallery{
+  width: 95%;
+  margin-left: auto;
+  margin-right: auto;
+  
+  overflow: hidden;
+  margin-top: 10px;
+}
+.message{
+  margin-top: 50px;
+  
+}
+
+.photo a:hover{
+  border-color: black;
+}
+.photo img{
+  width: 100%;
+  height: auto;
+  border:1px solid #ff751a;
+}
+.principal-content, .announce-news{
+  overflow: hidden;
+  width: 95%;
+  margin-right: auto;
+  margin-left: auto;
+ 
+  overflow: hidden;
+  margin-top: 10px;
+
 }
 .footer{
   width: 100%;
